# scrapping-ingredients

./: README.md  cluster_synonimies.ipynb  pyproject.toml
.github/workflows/: run-tests.yml
ah/: get_all_products.py  products.json  products2.json
scrapping_ingredients/ah/: ai_preprocessing_ingredients.py  get_all_products.py  preprocessing_ingredients.py  products.json
scrapping_ingredients/tests/ah/: test_preprocess_ingredients.py  test_split_ingredients.py
