[project]
name = "scrapping-ingredients"
version = "0.1.0"
description = "A Python project for scraping ingredients from websites."
authors = [{ name = "Tom Nijhof", email = "nijhof.dns@gmail.com" }]
license = "Apache-2.0"
keywords = ["scraping", "ingredients", "python"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.28.1",
    "beautifulsoup4>=4.11.1",
    "tqdm>=4.64.0",
    "aiohttp>=3.11.16",
    "ollama>=0.4.8",
    "regex>=2024.11.6",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "ipykernel>=6.24.0",
    "mypy>=1.5.2",
    "uv>=0.6.14",
    "pandas>=2.2.3",
]
